# PS2_Pnacher

./: CMakeLists.txt  README.md  meson.build
flatpak/: com.snaggly.ps2pnach.yml  io.github.Snaggly.PS2_Pnacher.yml
include/: ElfTools.h  IsoTools.h  Patcher.h  PnachTools.h  ReturnStatus.h  UI.h  mainapp.h
res/: CMakeLists.txt  com.snaggly.ps2pnach.desktop  com.snaggly.ps2pnach_gui.glade  io.github.Snaggly.PS2_Pnacher.desktop  io.github.Snaggly.PS2_Pnacher.metainfo.xml  io.github.Snaggly.PS2_Pnacher_gui.glade
src/: ElfTools.cpp  IsoTools.cpp  Patcher.cpp  PnachTools.cpp  gui.glade  main.cpp  mainapp.cpp
