install(FILES io.github.Snaggly.PS2_Pnacher.desktop DESTINATION share/applications/ COMPONENT desktop)
install(FILES io.github.Snaggly.PS2_Pnacher.svg DESTINATION share/icons/hicolor/scalable/apps COMPONENT desktop)
install(FILES io.github.Snaggly.PS2_Pnacher_gui.glade DESTINATION share/ps2pnacher)
